// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-bdfBwQ deKhoR"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-bdfBwQ KTUls"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-bdfBwQ deKhoR"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="sc-bdfBwQ jzROUc"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="sc-bdfBwQ hoQzBh"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-bdfBwQ kfqegF"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-bdfBwQ kfqegF"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-bdfBwQ kkMnMr"
  />
</div>
`;
